edit index.html and style.css grid first version

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <title>Google Search</title>
             <link href="style.css" rel="stylesheet">
         </head>
-        
+        <div class="container">
         <header>
             <nav class="meta">
                 <p id="about">About</p>
@@ -41,4 +41,5 @@
                 <p id="settings">Settings</p>
             </nav>
         </footer>
+        </div>
     </html>
