added index.html and style.css, li instead of grid, nav bar need spacing

--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
         <div class="container">
         <header>
             <nav class="meta">
-                <p id="about">About</p>
-                <p id="store">Store</p>
-                <p is="gmail">Gmail</p>
-                <p id="image">Images</p>
-                <p id="menu">menu</p>
-                <p id="acc">account</p>
+            <ul>
+                <li>About</li>
+                <li>Store</li>
+                <li>Gmail</li>
+                <li>Images</li>
+                <li>menu</li>
+                <li>account</li>
+            </ul>
             </nav>
         </header>
 
         <body>
             <div class="logo">
                 <image src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
-            </div>
+            </div><br>
             <div class="form">
-                <textarea id="form">Search</textarea>
+                <input class="box" type="text" value="Search"><br>
                 <button id="search">Google Search</button>
                 <button id ="lucky">I'm Feeling Lucky</button>
                 <p id="lang">Google offered in:<a href="https://www.google.com/setprefs?sig=0_01bmyA0QYzZRp6b3RYzyWKpbKGQ%3D&hl=de&source=homepage&sa=X&ved=0ahUKEwjompuZmIbmAhUNUlAKHbLlASoQ2ZgBCBA">Deutsch</a></p>
@@ -30,15 +32,19 @@
 
         <footer>
             <nav class="foottop">
-                <p id="country">Germany</p>
+                <ul>
+                    <li>Germany</li>
+                </ul>
             </nav>
             <nav class="footbot">
-                <p id="ads">Advertising</p>
-                <p id="business">Business</p>
-                <p id="how">How Search Works</p>
-                <p id="privacy">Privacy</p>
-                <p id="terms">Terms</p>
-                <p id="settings">Settings</p>
+                <ul>
+                    <li>Advertising</li>
+                    <li>Business</li>
+                    <li>How Search Works</li>
+                    <li>Privacy</li>
+                    <li>Terms</li>
+                    <li>Settings</li>
+                </ul>
             </nav>
         </footer>
         </div>
